new track and better controls

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\PC\\Neural-Networks-Car-Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  from pkg_resources import resource_stream, resource_exists\n"
      ]
     },
@@ -38,25 +38,25 @@
    "outputs": [],
    "source": [
     "# global constants\n",
+    "\n",
     "SCREEN_WIDTH, SCREEN_HEIGHT = 1280, 720\n",
     "BG_COLOR = (120, 120, 120)\n",
-    "\n",
     "DRAW_COLOR = (50, 50, 50)\n",
+    "\n",
     "DRAW_RADIUS = 2\n",
     "ERASE_RADIUS = 5\n",
     "\n",
     "CAR_WIDTH, CAR_HEIGHT = 20, 40\n",
-    "DEFAULT_START_X, DEFAULT_START_Y = 897, 380\n",
+    "DEFAULT_START_X, DEFAULT_START_Y = 950, 470\n",
     "DEFAULT_START_ANGLE = 0\n",
     "DEFAULT_START_SPEED = 0\n",
-    "\n",
     "ACCELERATION = 0.1\n",
     "FRICTION = 0.05\n",
     "TURN_ANGLE = 2\n",
     "\n",
     "TRACK_SAVE_PATH = \"track.png\"\n",
     "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
-    "TRACK_IMAGE_PATH = r\"Track_images\\silverstone_track.png\"\n"
+    "TRACK_IMAGE_PATH = r\"track.png\""
    ]
   },
   {
@@ -86,9 +86,7 @@
     "    pygame.display.set_caption(\"Drawing the track, press 'S' to save as image.\")\n",
     "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "    screen.fill(BG_COLOR)\n",
-    "\n",
     "    running, drawing, erase = True, False, False\n",
-    "\n",
     "    while running:\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
@@ -111,9 +109,8 @@
     "                    pygame.draw.circle(screen, BG_COLOR, mouse_pos, ERASE_RADIUS)\n",
     "            elif event.type == pygame.KEYDOWN and event.key == pygame.K_s:\n",
     "                pygame.image.save(screen, TRACK_SAVE_PATH)\n",
-    "\n",
     "        pygame.display.update()\n",
-    "    pygame.quit()\n"
+    "    pygame.quit()"
    ]
   },
   {
@@ -142,7 +139,7 @@
     "    def draw(self, screen):\n",
     "        rotated_img = pygame.transform.rotate(self.image, self.angle)\n",
     "        rect = rotated_img.get_rect(center=(self.x, self.y))\n",
-    "        screen.blit(rotated_img, rect.topleft)\n"
+    "        screen.blit(rotated_img, rect.topleft)"
    ]
   },
   {
@@ -166,7 +163,7 @@
     "        while distance < max_distance:\n",
     "            rad = np.radians(ray_angle)\n",
     "            ray_x += np.cos(rad)\n",
-    "            ray_y -= np.sin(rad)  \n",
+    "            ray_y -= np.sin(rad)\n",
     "            distance += 1\n",
     "\n",
     "            if not (0 <= ray_x < SCREEN_WIDTH and 0 <= ray_y < SCREEN_HEIGHT):\n",
@@ -179,20 +176,21 @@
     "        sensor_distance.append(distance)\n",
     "        sensor_endpoint.append((ray_x, ray_y))\n",
     "\n",
-    "    return sensor_distance, sensor_endpoint\n"
+    "    return sensor_distance, sensor_endpoint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation(start_x=DEFAULT_START_X, \n",
-    "                   start_y=DEFAULT_START_Y, \n",
-    "                   start_angle=DEFAULT_START_ANGLE, \n",
+    "def run_simulation(start_x=DEFAULT_START_X,\n",
+    "                   start_y=DEFAULT_START_Y,\n",
+    "                   start_angle=DEFAULT_START_ANGLE,\n",
     "                   start_speed=DEFAULT_START_SPEED):\n",
+    "\n",
     "    pygame.init()\n",
     "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "    clock = pygame.time.Clock()\n",
@@ -206,7 +204,6 @@
     "    screen.fill(BG_COLOR)\n",
     "    screen.blit(track_image, (0, 0))\n",
     "\n",
-    "    \n",
     "    CAR_ROAD_COLOR = track_surface.get_at((start_x, start_y))[:3]\n",
     "\n",
     "    running = True\n",
@@ -223,13 +220,11 @@
     "        if abs(car.speed) < FRICTION:\n",
     "            car.speed = 0\n",
     "        if keys[pygame.K_DOWN]:\n",
-    "            if car.speed < 0.5:\n",
-    "                car.speed -= ACCELERATION*2\n",
     "            car.speed -= ACCELERATION\n",
     "        if keys[pygame.K_UP]:\n",
     "            car.speed += ACCELERATION\n",
     "        if car.speed != 0:\n",
-    "            turn_factor = TURN_ANGLE * (car.speed / 5.0)\n",
+    "            turn_factor = TURN_ANGLE * (car.speed * 2 / 2.5)\n",
     "            if keys[pygame.K_LEFT]:\n",
     "                car.angle += turn_factor\n",
     "            if keys[pygame.K_RIGHT]:\n",
@@ -240,14 +235,14 @@
     "        font = pygame.font.Font(None, 22)\n",
     "        text_surface = font.render(f\"Speed: {car.speed:.2f}\", True, (255, 255, 255))\n",
     "        screen.blit(text_surface, (50, 50))\n",
-    "                \n",
+    "\n",
     "        # ray casting\n",
-    "        distance, sensor_endpoint = ray_casting(car, screen,track_surface)\n",
+    "        distance, sensor_endpoint = ray_casting(car, screen, track_surface)\n",
     "        text_surface = font.render(f\"Distances: {distance}\", True, (255, 255, 255))\n",
     "        screen.blit(text_surface, (50, 80))\n",
     "        for endpoint in sensor_endpoint:\n",
     "            pygame.draw.line(screen, (0, 255, 0), (car.x, car.y), endpoint, 1)\n",
-    "            \n",
+    "\n",
     "        car.move()\n",
     "        car.draw(screen)\n",
     "\n",
@@ -256,14 +251,14 @@
     "            car_center_pos = (int(car.x), int(car.y))\n",
     "            pixel_color = track_surface.get_at(car_center_pos)[:3]\n",
     "            if pixel_color != CAR_ROAD_COLOR:\n",
-    "                text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))  \n",
-    "                screen.blit(text_surface, (50, 110))  \n",
+    "                text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))\n",
+    "                screen.blit(text_surface, (50, 110))\n",
     "                car.x, car.y = start_x, start_y\n",
     "                car.angle = start_angle\n",
     "                car.speed = start_speed\n",
     "        except IndexError:\n",
-    "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255)) \n",
-    "            screen.blit(text_surface, (50, 110))  \n",
+    "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))\n",
+    "            screen.blit(text_surface, (50, 110))\n",
     "            car.x, car.y = start_x, start_y\n",
     "            car.angle = start_angle\n",
     "            car.speed = start_speed\n",
@@ -271,7 +266,20 @@
     "        pygame.display.update()\n",
     "        clock.tick(60)\n",
     "\n",
-    "    pygame.quit()\n"
+    "    pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f07ea071",
+   "metadata": {},
+   "source": [
+    "        if event.type == pygame.MOUSEMOTION:\n",
+    "            mouse_point = event.pos\n",
+    "            text_surface = font.render(f\"Location: {mouse_point}\", True, (255, 255, 255))\n",
+    "            screen.blit(text_surface, (50, 100))\n",
+    " #code for getting mouse location\n",
+    " \n"
    ]
   },
   {
@@ -282,7 +290,7 @@
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    # draw_track()\n",
+    "    #draw_track()\n",
     "    run_simulation()\n"
    ]
   },
