Added max speed and best lap time

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,37 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "f6ebb160",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#required libraries\n",
     "import numpy as np\n",
     "import pygame\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -71,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -115,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "ec1fd998",
    "metadata": {},
    "outputs": [],
@@ -144,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
@@ -181,16 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation(start_x=DEFAULT_START_X,\n",
-    "                   start_y=DEFAULT_START_Y,\n",
-    "                   start_angle=DEFAULT_START_ANGLE,\n",
-    "                   start_speed=DEFAULT_START_SPEED):\n",
-    "\n",
+    "def run_simulation(\n",
+    "    start_x=DEFAULT_START_X,\n",
+    "    start_y=DEFAULT_START_Y,\n",
+    "    start_angle=DEFAULT_START_ANGLE,\n",
+    "    start_speed=DEFAULT_START_SPEED\n",
+    "):\n",
     "    pygame.init()\n",
     "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "    clock = pygame.time.Clock()\n",
@@ -206,12 +191,17 @@
     "\n",
     "    CAR_ROAD_COLOR = track_surface.get_at((start_x, start_y))[:3]\n",
     "\n",
+    "    car_max_speed = 0\n",
+    "    car_best_lap_time = 0\n",
+    "    start_time = time.time()\n",
     "    running = True\n",
     "    while running:\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                running = False\n",
-    "\n",
+    "        time_running=True\n",
+    "        if not time_running:\n",
+    "            start_time = time.time()\n",
     "        keys = pygame.key.get_pressed()\n",
     "        if car.speed > 0:\n",
     "            car.speed -= FRICTION\n",
@@ -236,7 +226,7 @@
     "        text_surface = font.render(f\"Speed: {car.speed:.2f}\", True, (255, 255, 255))\n",
     "        screen.blit(text_surface, (50, 50))\n",
     "\n",
-    "        # ray casting\n",
+    "        # Ray casting\n",
     "        distance, sensor_endpoint = ray_casting(car, screen, track_surface)\n",
     "        text_surface = font.render(f\"Distances: {distance}\", True, (255, 255, 255))\n",
     "        screen.blit(text_surface, (50, 80))\n",
@@ -246,22 +236,42 @@
     "        car.move()\n",
     "        car.draw(screen)\n",
     "\n",
-    "        # collision detection\n",
-    "        try:\n",
-    "            car_center_pos = (int(car.x), int(car.y))\n",
-    "            pixel_color = track_surface.get_at(car_center_pos)[:3]\n",
-    "            if pixel_color != CAR_ROAD_COLOR:\n",
-    "                text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))\n",
-    "                screen.blit(text_surface, (50, 110))\n",
-    "                car.x, car.y = start_x, start_y\n",
-    "                car.angle = start_angle\n",
-    "                car.speed = start_speed\n",
-    "        except IndexError:\n",
+    "        # Collision detection (including out-of-bounds)\n",
+    "        crashed = False\n",
+    "        car_center_pos = (int(car.x), int(car.y))\n",
+    "        if not (0 <= car.x < SCREEN_WIDTH and 0 <= car.y < SCREEN_HEIGHT):\n",
+    "            crashed = True\n",
+    "        else:\n",
+    "            try:\n",
+    "                pixel_color = track_surface.get_at(car_center_pos)[:3]\n",
+    "                if pixel_color != CAR_ROAD_COLOR:\n",
+    "                    crashed = True\n",
+    "            except IndexError:\n",
+    "                crashed = True\n",
+    "\n",
+    "        if crashed:\n",
+    "            end_time = time.time()\n",
+    "            elapsed_time = end_time - start_time\n",
+    "            if car_best_lap_time > elapsed_time or car_best_lap_time == 0:\n",
+    "                car_best_lap_time = elapsed_time\n",
+    "            text_surface = font.render(f\"Current lap time : {elapsed_time:.2f}s\", True, (255, 255, 255))\n",
+    "            screen.blit(text_surface, (50, 150))\n",
     "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))\n",
     "            screen.blit(text_surface, (50, 110))\n",
+    "            pygame.display.update()\n",
+    "            pygame.time.wait(1000)  # Show message for 1 second\n",
     "            car.x, car.y = start_x, start_y\n",
     "            car.angle = start_angle\n",
     "            car.speed = start_speed\n",
+    "            start_time = time.time()  # Reset lap timer after crash\n",
+    "\n",
+    "        if car.speed > car_max_speed:\n",
+    "            car_max_speed = car.speed\n",
+    "\n",
+    "        text_surface = font.render(f\"Max speed: {car_max_speed:.2f}\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 500))\n",
+    "        text_surface = font.render(f\"Best lap time: {car_best_lap_time:.2f}s\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 530))\n",
     "\n",
     "        pygame.display.update()\n",
     "        clock.tick(60)\n",
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "823c5ef8",
    "metadata": {},
    "outputs": [],
