added new turn physics

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "f6ebb160",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -32,15 +32,18 @@
     "\n",
     "CAR_WIDTH, CAR_HEIGHT = 20, 40\n",
     "DEFAULT_START_X, DEFAULT_START_Y = 950, 470\n",
-    "DEFAULT_START_ANGLE = 0\n",
+    "DEFAULT_START_ANGLE = -45\n",
     "DEFAULT_START_SPEED = 0\n",
-    "ACCELERATION = 0.1\n",
-    "FRICTION = 0.05\n",
-    "TURN_ANGLE = 2\n",
+    "ACCELERATION = 0.05\n",
+    "BRAKE_FORCE = 0.1\n",
+    "MAX_SPEED = 5.00\n",
+    "FRICTION = 0.025\n",
+    "MIN_TURN_ANGLE = 1.5\n",
+    "MAX_TURN_ANGLE = 2.5\n",
     "\n",
-    "TRACK_SAVE_PATH = \"track.png\"\n",
+    "TRACK_SAVE_PATH = \"track1.png\"\n",
     "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
-    "TRACK_IMAGE_PATH = r\"track.png\""
+    "TRACK_IMAGE_PATH = r\"track1.png\""
    ]
   },
   {
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "ec1fd998",
    "metadata": {},
    "outputs": [],
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
@@ -165,7 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "id": "35516690",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
@@ -210,15 +221,34 @@
     "        if abs(car.speed) < FRICTION:\n",
     "            car.speed = 0\n",
     "        if keys[pygame.K_DOWN]:\n",
-    "            car.speed -= ACCELERATION\n",
+    "            car.speed -= BRAKE_FORCE\n",
     "        if keys[pygame.K_UP]:\n",
-    "            car.speed += ACCELERATION\n",
-    "        if car.speed != 0:\n",
-    "            turn_factor = TURN_ANGLE * (car.speed * 2 / 2.5)\n",
+    "            if car.speed < MAX_SPEED:\n",
+    "                car.speed += ACCELERATION\n",
+    "                \n",
+    "        if car.speed > 0.1:\n",
+    "            speed_factor = car.speed / MAX_SPEED\n",
+    "            turn_range = MAX_TURN_ANGLE - MIN_TURN_ANGLE\n",
+    "            dynamic_turn_angle = MAX_TURN_ANGLE - (speed_factor * turn_range)\n",
+    "        \n",
     "            if keys[pygame.K_LEFT]:\n",
-    "                car.angle += turn_factor\n",
+    "                car.angle += dynamic_turn_angle\n",
     "            if keys[pygame.K_RIGHT]:\n",
-    "                car.angle -= turn_factor\n",
+    "                car.angle -= dynamic_turn_angle\n",
+    "        \n",
+    "        # Previous turning logic\n",
+    "        # if car.speed != 0:\n",
+    "        #     turn_factor = TURN_ANGLE * (car.speed * 2 / 2.25)\n",
+    "        #     if turn_factor < 2.5:\n",
+    "        #         if keys[pygame.K_LEFT]:\n",
+    "        #             car.angle += turn_factor\n",
+    "        #         if keys[pygame.K_RIGHT]:    \n",
+    "        #             car.angle -= turn_factor\n",
+    "        #     elif turn_factor >= 2.5:\n",
+    "        #         if keys[pygame.K_LEFT]:\n",
+    "        #             car.angle += 2.5\n",
+    "        #         if keys[pygame.K_RIGHT]:    \n",
+    "        #             car.angle -= 2.5\n",
     "\n",
     "        screen.blit(track_image, (0, 0))\n",
     "\n",
@@ -294,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "823c5ef8",
    "metadata": {},
    "outputs": [],
@@ -323,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
