better laptime and checkpoint data added

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "id": "f6ebb160",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "ERASE_RADIUS = 5\n",
     "\n",
     "CAR_WIDTH, CAR_HEIGHT = 20, 40\n",
-    "DEFAULT_START_X, DEFAULT_START_Y = 950, 470\n",
+    "DEFAULT_START_X, DEFAULT_START_Y = 892, 426\n",
     "DEFAULT_START_ANGLE = -45\n",
     "DEFAULT_START_SPEED = 0\n",
     "ACCELERATION = 0.05\n",
@@ -39,7 +39,7 @@
     "MAX_SPEED = 5.00\n",
     "FRICTION = 0.025\n",
     "MIN_TURN_ANGLE = 1.5\n",
-    "MAX_TURN_ANGLE = 2.5\n",
+    "MAX_TURN_ANGLE = 2\n",
     "\n",
     "TRACK_SAVE_PATH = \"track1.png\"\n",
     "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ec1fd998",
    "metadata": {},
    "outputs": [],
@@ -117,21 +117,27 @@
     "        self.x, self.y = x, y\n",
     "        self.angle = angle\n",
     "        self.speed = speed\n",
+    "        self.rect=self.image.get_rect(center=(self.x,self.y))\n",
     "\n",
     "    def move(self):\n",
     "        rad = np.radians(self.angle)\n",
     "        self.x += self.speed * np.cos(rad)\n",
     "        self.y -= self.speed * np.sin(rad)\n",
+    "        self.rect.center = (self.x, self.y)\n",
     "\n",
     "    def draw(self, screen):\n",
     "        rotated_img = pygame.transform.rotate(self.image, self.angle)\n",
     "        rect = rotated_img.get_rect(center=(self.x, self.y))\n",
-    "        screen.blit(rotated_img, rect.topleft)"
+    "        self.mask=pygame.mask.from_surface(rotated_img)\n",
+    "        screen.blit(rotated_img, rect.topleft)\n",
+    "        \n",
+    "    def get_rect(self):\n",
+    "        return self.rect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
@@ -202,17 +208,47 @@
     "\n",
     "    CAR_ROAD_COLOR = track_surface.get_at((start_x, start_y))[:3]\n",
     "\n",
+    "    finish_line_rect=pygame.Rect(start_x+30,start_y-20,10,100)\n",
+    "\n",
+    "    lap_start_time=0\n",
+    "    best_lap_time=float('inf')\n",
+    "    current_lap_time=0\n",
+    "    lap_started=False\n",
+    "    car_on_finish=False\n",
+    "\n",
     "    car_max_speed = 0\n",
-    "    car_best_lap_time = 0\n",
-    "    start_time = time.time()\n",
+    "    \n",
+    "    #checkpoints\n",
+    "    checkpoints=[]\n",
+    "    checkpoint_data=[\n",
+    "        (834,520,10,120,0),\n",
+    "        (600,540,10,120,0),\n",
+    "        (110,569,10,120,0),\n",
+    "        (285,483,10,120,0),\n",
+    "        (366,314,10,120,0),\n",
+    "        (355,173,10,120,0),\n",
+    "        (450,109,10,120,0),\n",
+    "        (606,170,10,120,0),\n",
+    "        (818,91,10,120,0),\n",
+    "        (1127,88,10,120,0),\n",
+    "        (1094,270,10,120,0),\n",
+    "        (920,346,10,120,0)\n",
+    "    ]\n",
+    "    for x,y,w,h,a in checkpoint_data:\n",
+    "        base_surface=pygame.Surface((w,h),pygame.SRCALPHA)\n",
+    "        base_surface.fill((255,0,255,100))\n",
+    "        rotated_surface=pygame.transform.rotate(base_surface,a)\n",
+    "        rect=rotated_surface.get_rect(center=(x,y))\n",
+    "        mask=pygame.mask.from_surface(rotated_surface)\n",
+    "        checkpoints.append({'surface': rotated_surface, 'rect': rect, 'mask': mask})\n",
+    "    current_checkpoint=0\n",
+    "        \n",
+    "\n",
     "    running = True\n",
     "    while running:\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                running = False\n",
-    "        time_running=True\n",
-    "        if not time_running:\n",
-    "            start_time = time.time()\n",
     "        keys = pygame.key.get_pressed()\n",
     "        if car.speed > 0:\n",
     "            car.speed -= FRICTION\n",
@@ -235,20 +271,6 @@
     "                car.angle += dynamic_turn_angle\n",
     "            if keys[pygame.K_RIGHT]:\n",
     "                car.angle -= dynamic_turn_angle\n",
-    "        \n",
-    "        # Previous turning logic\n",
-    "        # if car.speed != 0:\n",
-    "        #     turn_factor = TURN_ANGLE * (car.speed * 2 / 2.25)\n",
-    "        #     if turn_factor < 2.5:\n",
-    "        #         if keys[pygame.K_LEFT]:\n",
-    "        #             car.angle += turn_factor\n",
-    "        #         if keys[pygame.K_RIGHT]:    \n",
-    "        #             car.angle -= turn_factor\n",
-    "        #     elif turn_factor >= 2.5:\n",
-    "        #         if keys[pygame.K_LEFT]:\n",
-    "        #             car.angle += 2.5\n",
-    "        #         if keys[pygame.K_RIGHT]:    \n",
-    "        #             car.angle -= 2.5\n",
     "\n",
     "        screen.blit(track_image, (0, 0))\n",
     "\n",
@@ -264,7 +286,34 @@
     "            pygame.draw.line(screen, (0, 255, 0), (car.x, car.y), endpoint, 1)\n",
     "\n",
     "        car.move()\n",
+    "        \n",
+    "        #cheking checkpoints\n",
+    "        if current_checkpoint<len(checkpoints):\n",
+    "            target_checkpoint=checkpoints[current_checkpoint]\n",
+    "            offset_x=target_checkpoint['rect'].x-car.rect.x\n",
+    "            offset_y=target_checkpoint['rect'].y-car.rect.y\n",
+    "            if car.mask.overlap(target_checkpoint['mask'],(offset_x,offset_y)):\n",
+    "                current_checkpoint+=1\n",
+    "                print(f\"Checkpoint reached!{current_checkpoint}\")\n",
+    "        \n",
     "        car.draw(screen)\n",
+    "        \n",
+    "        #lap timing (collision detection)\n",
+    "        is_colliding=car.get_rect().colliderect(finish_line_rect)\n",
+    "        if is_colliding and not car_on_finish:\n",
+    "            car_on_finish=True\n",
+    "            if not lap_started:                   ##   <<<<  change this start from here <<<<\n",
+    "                lap_started=True   \n",
+    "                lap_start_time=time.time()\n",
+    "            else:\n",
+    "                lap_time=time.time()-lap_start_time\n",
+    "                best_lap_time=min(best_lap_time,lap_time)\n",
+    "                lap_start_time=time.time()\n",
+    "        if not is_colliding:\n",
+    "            car_on_finish=False\n",
+    "            \n",
+    "        pygame.draw.rect(screen, (250, 100, 50), finish_line_rect)\n",
+    "        \n",
     "\n",
     "        # Collision detection (including out-of-bounds)\n",
     "        crashed = False\n",
@@ -280,12 +329,8 @@
     "                crashed = True\n",
     "\n",
     "        if crashed:\n",
-    "            end_time = time.time()\n",
-    "            elapsed_time = end_time - start_time\n",
-    "            if car_best_lap_time > elapsed_time or car_best_lap_time == 0:\n",
-    "                car_best_lap_time = elapsed_time\n",
-    "            text_surface = font.render(f\"Current lap time : {elapsed_time:.2f}s\", True, (255, 255, 255))\n",
-    "            screen.blit(text_surface, (50, 150))\n",
+    "            lap_started=False\n",
+    "            current_lap_time=0 \n",
     "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))\n",
     "            screen.blit(text_surface, (50, 110))\n",
     "            pygame.display.update()\n",
@@ -293,15 +338,27 @@
     "            car.x, car.y = start_x, start_y\n",
     "            car.angle = start_angle\n",
     "            car.speed = start_speed\n",
-    "            start_time = time.time()  # Reset lap timer after crash\n",
     "\n",
     "        if car.speed > car_max_speed:\n",
     "            car_max_speed = car.speed\n",
     "\n",
-    "        text_surface = font.render(f\"Max speed: {car_max_speed:.2f}\", True, (255, 255, 255))\n",
+    "        if lap_started:\n",
+    "            current_lap_time = time.time() - lap_start_time\n",
+    "            current_lap_str = f\"Lap: {current_lap_time:.2f}s\"\n",
+    "        else:\n",
+    "            current_lap_str = \"Lap: 0.00s\"                                           # remove the below condition after adding check points\n",
+    "        best_lap_str = f\"Best: {best_lap_time:.2f}s\" if best_lap_time != float('inf') and lap_time>30 else \"Best: N/A\"\n",
+    "        text_surface = font.render(current_lap_str, True, (255, 255, 255))            # remove this ^^^ condition\n",
     "        screen.blit(text_surface, (50, 500))\n",
-    "        text_surface = font.render(f\"Best lap time: {car_best_lap_time:.2f}s\", True, (255, 255, 255))\n",
-    "        screen.blit(text_surface, (50, 530))\n",
+    "        best_text = font.render(best_lap_str, True, (255, 255, 255))\n",
+    "        screen.blit(best_text, (50, 530))\n",
+    "        text_surface = font.render(f\"Max speed: {car_max_speed:.2f}\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 470))\n",
+    "        \n",
+    "        if event.type == pygame.MOUSEMOTION:\n",
+    "            mouse_point = event.pos\n",
+    "            text_surface = font.render(f\"Location: {mouse_point}\", True, (255, 255, 255))\n",
+    "            screen.blit(text_surface, (50, 100))\n",
     "\n",
     "        pygame.display.update()\n",
     "        clock.tick(60)\n",
@@ -324,10 +381,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "823c5ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Car' object has no attribute 'mask'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[91]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m      2\u001b[39m     \u001b[38;5;66;03m#draw_track()\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[43mrun_simulation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[90]\u001b[39m\u001b[32m, line 106\u001b[39m, in \u001b[36mrun_simulation\u001b[39m\u001b[34m(start_x, start_y, start_angle, start_speed)\u001b[39m\n\u001b[32m    104\u001b[39m offset_x=target_checkpoint[\u001b[33m'\u001b[39m\u001b[33mrect\u001b[39m\u001b[33m'\u001b[39m].x-car.rect.x\n\u001b[32m    105\u001b[39m offset_y=target_checkpoint[\u001b[33m'\u001b[39m\u001b[33mrect\u001b[39m\u001b[33m'\u001b[39m].y-car.rect.y\n\u001b[32m--> \u001b[39m\u001b[32m106\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcar\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmask\u001b[49m.overlap(target_checkpoint[\u001b[33m'\u001b[39m\u001b[33mmask\u001b[39m\u001b[33m'\u001b[39m],(offset_x,offset_y)):\n\u001b[32m    107\u001b[39m     current_checkpoint+=\u001b[32m1\u001b[39m\n\u001b[32m    108\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCheckpoint reached!\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcurrent_checkpoint\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Car' object has no attribute 'mask'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    #draw_track()\n",
