--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "f6ebb160",
+   "execution_count": null,
+   "id": "0d5d622a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#required libraries\n",
     "import numpy as np\n",
-    "import pygame\n",
+    "import pygame           \n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +30,7 @@
     "DRAW_COLOR = (50, 50, 50)\n",
     "\n",
     "DRAW_RADIUS = 2\n",
-    "ERASE_RADIUS = 5\n",
+    "ERASE_RADIUS = 5  \n",
     "\n",
     "CAR_WIDTH, CAR_HEIGHT = 20, 40\n",
     "DEFAULT_START_X, DEFAULT_START_Y = 892, 426\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -102,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec1fd998",
+   "execution_count": 45,
+   "id": "d0895936",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +114,17 @@
     "    Class representing a car in the racing simulation.\n",
     "    \"\"\"\n",
     "    def __init__(self, image_path, x, y, angle=0, speed=0):\n",
+    "        self.original_image = pygame.transform.scale(\n",
+    "            pygame.image.load(image_path).convert_alpha(), \n",
+    "            (CAR_WIDTH, CAR_HEIGHT)\n",
+    "        )\n",
     "        image = pygame.image.load(image_path).convert_alpha()\n",
     "        self.image = pygame.transform.scale(image, (CAR_WIDTH, CAR_HEIGHT))\n",
     "        self.x, self.y = x, y\n",
     "        self.angle = angle\n",
     "        self.speed = speed\n",
     "        self.rect=self.image.get_rect(center=(self.x,self.y))\n",
+    "        self.mask=pygame.mask.from_surface(self.image)\n",
     "\n",
     "    def move(self):\n",
     "        rad = np.radians(self.angle)\n",
@@ -126,10 +133,10 @@
     "        self.rect.center = (self.x, self.y)\n",
     "\n",
     "    def draw(self, screen):\n",
-    "        rotated_img = pygame.transform.rotate(self.image, self.angle)\n",
-    "        rect = rotated_img.get_rect(center=(self.x, self.y))\n",
-    "        self.mask=pygame.mask.from_surface(rotated_img)\n",
-    "        screen.blit(rotated_img, rect.topleft)\n",
+    "        self.image = pygame.transform.rotate(self.original_image, self.angle)\n",
+    "        self.rect = self.image.get_rect(center=(self.x, self.y))\n",
+    "        self.mask = pygame.mask.from_surface(self.image)\n",
+    "        screen.blit(self.image, self.rect.topleft)\n",
     "        \n",
     "    def get_rect(self):\n",
     "        return self.rect"
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 46,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
@@ -174,15 +181,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "35516690",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_3\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1mModel: \"sequential_3\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ dense_11 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_12 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_13 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ dense_11 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m128\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_12 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_13 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">707</span> (2.76 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m707\u001b[0m (2.76 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">707</span> (2.76 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m707\u001b[0m (2.76 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def model():\n",
+    "    input=tf.keras.Input(shape=(3,))\n",
+    "    model=Sequential(\n",
+    "        [Dense(32,activation='relu',input_shape=(3,)),\n",
+    "         Dense(16,activation='relu'),\n",
+    "         Dense(3,activation='linear')]\n",
+    "    )\n",
+    "    model.compile(optimizer='adam',loss='mse')\n",
+    "    return model\n",
+    "ai_model=model()\n",
+    "ai_model.summary()\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
@@ -223,16 +325,16 @@
     "    checkpoint_data=[\n",
     "        (834,520,10,120,0),\n",
     "        (600,540,10,120,0),\n",
-    "        (110,569,10,120,0),\n",
+    "        (110,569,10,120,90),\n",
     "        (285,483,10,120,0),\n",
     "        (366,314,10,120,0),\n",
     "        (355,173,10,120,0),\n",
     "        (450,109,10,120,0),\n",
     "        (606,170,10,120,0),\n",
     "        (818,91,10,120,0),\n",
-    "        (1127,88,10,120,0),\n",
+    "        (1127,88,10,120,310),\n",
     "        (1094,270,10,120,0),\n",
-    "        (920,346,10,120,0)\n",
+    "        (920,346,10,120,45)\n",
     "    ]\n",
     "    for x,y,w,h,a in checkpoint_data:\n",
     "        base_surface=pygame.Surface((w,h),pygame.SRCALPHA)\n",
@@ -242,7 +344,6 @@
     "        mask=pygame.mask.from_surface(rotated_surface)\n",
     "        checkpoints.append({'surface': rotated_surface, 'rect': rect, 'mask': mask})\n",
     "    current_checkpoint=0\n",
-    "        \n",
     "\n",
     "    running = True\n",
     "    while running:\n",
@@ -288,27 +389,39 @@
     "        car.move()\n",
     "        \n",
     "        #cheking checkpoints\n",
-    "        if current_checkpoint<len(checkpoints):\n",
-    "            target_checkpoint=checkpoints[current_checkpoint]\n",
-    "            offset_x=target_checkpoint['rect'].x-car.rect.x\n",
-    "            offset_y=target_checkpoint['rect'].y-car.rect.y\n",
-    "            if car.mask.overlap(target_checkpoint['mask'],(offset_x,offset_y)):\n",
-    "                current_checkpoint+=1\n",
-    "                print(f\"Checkpoint reached!{current_checkpoint}\")\n",
+    "        if current_checkpoint < len(checkpoints):\n",
+    "            target = checkpoints[current_checkpoint]\n",
+    "\n",
+    "            # compute offset of target mask relative to car mask\n",
+    "            offset_x = target['rect'].left - car.rect.left\n",
+    "            offset_y = target['rect'].top  - car.rect.top\n",
+    "\n",
+    "\n",
+    "            if (offset_y==0 and -60<offset_x<60) or (offset_x==0 and -60<offset_y<60):\n",
+    "                current_checkpoint += 1\n",
+    "                print(f\"Checkpoint reached! {current_checkpoint}\")\n",
+    "\n",
     "        \n",
     "        car.draw(screen)\n",
+    "        \n",
+    "        for i, cp in enumerate(checkpoints):\n",
+    "          screen.blit(cp['surface'], cp['rect'])\n",
+    "          if i == current_checkpoint:\n",
+    "              pygame.draw.rect(screen, (0, 255, 0), cp['rect'], 3)\n",
     "        \n",
     "        #lap timing (collision detection)\n",
     "        is_colliding=car.get_rect().colliderect(finish_line_rect)\n",
     "        if is_colliding and not car_on_finish:\n",
     "            car_on_finish=True\n",
-    "            if not lap_started:                   ##   <<<<  change this start from here <<<<\n",
-    "                lap_started=True   \n",
-    "                lap_start_time=time.time()\n",
-    "            else:\n",
+    "            if lap_started and current_checkpoint == len(checkpoints):\n",
     "                lap_time=time.time()-lap_start_time\n",
     "                best_lap_time=min(best_lap_time,lap_time)\n",
     "                lap_start_time=time.time()\n",
+    "                current_checkpoint=0\n",
+    "            elif not lap_started:\n",
+    "                lap_started = True\n",
+    "                lap_start_time = time.time()\n",
+    "                current_checkpoint = 0\n",
     "        if not is_colliding:\n",
     "            car_on_finish=False\n",
     "            \n",
@@ -331,6 +444,7 @@
     "        if crashed:\n",
     "            lap_started=False\n",
     "            current_lap_time=0 \n",
+    "            current_checkpoint=0\n",
     "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))\n",
     "            screen.blit(text_surface, (50, 110))\n",
     "            pygame.display.update()\n",
@@ -346,19 +460,14 @@
     "            current_lap_time = time.time() - lap_start_time\n",
     "            current_lap_str = f\"Lap: {current_lap_time:.2f}s\"\n",
     "        else:\n",
-    "            current_lap_str = \"Lap: 0.00s\"                                           # remove the below condition after adding check points\n",
-    "        best_lap_str = f\"Best: {best_lap_time:.2f}s\" if best_lap_time != float('inf') and lap_time>30 else \"Best: N/A\"\n",
-    "        text_surface = font.render(current_lap_str, True, (255, 255, 255))            # remove this ^^^ condition\n",
+    "            current_lap_str = \"Lap: 0.00s\"                                           \n",
+    "        best_lap_str = f\"Best: {best_lap_time:.2f}s\" if best_lap_time != float('inf') else \"Best: N/A\"\n",
+    "        text_surface = font.render(current_lap_str, True, (255, 255, 255))            \n",
     "        screen.blit(text_surface, (50, 500))\n",
     "        best_text = font.render(best_lap_str, True, (255, 255, 255))\n",
     "        screen.blit(best_text, (50, 530))\n",
     "        text_surface = font.render(f\"Max speed: {car_max_speed:.2f}\", True, (255, 255, 255))\n",
     "        screen.blit(text_surface, (50, 470))\n",
-    "        \n",
-    "        if event.type == pygame.MOUSEMOTION:\n",
-    "            mouse_point = event.pos\n",
-    "            text_surface = font.render(f\"Location: {mouse_point}\", True, (255, 255, 255))\n",
-    "            screen.blit(text_surface, (50, 100))\n",
     "\n",
     "        pygame.display.update()\n",
     "        clock.tick(60)\n",
@@ -381,31 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "823c5ef8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Car' object has no attribute 'mask'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[91]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m      2\u001b[39m     \u001b[38;5;66;03m#draw_track()\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[43mrun_simulation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[90]\u001b[39m\u001b[32m, line 106\u001b[39m, in \u001b[36mrun_simulation\u001b[39m\u001b[34m(start_x, start_y, start_angle, start_speed)\u001b[39m\n\u001b[32m    104\u001b[39m offset_x=target_checkpoint[\u001b[33m'\u001b[39m\u001b[33mrect\u001b[39m\u001b[33m'\u001b[39m].x-car.rect.x\n\u001b[32m    105\u001b[39m offset_y=target_checkpoint[\u001b[33m'\u001b[39m\u001b[33mrect\u001b[39m\u001b[33m'\u001b[39m].y-car.rect.y\n\u001b[32m--> \u001b[39m\u001b[32m106\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcar\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmask\u001b[49m.overlap(target_checkpoint[\u001b[33m'\u001b[39m\u001b[33mmask\u001b[39m\u001b[33m'\u001b[39m],(offset_x,offset_y)):\n\u001b[32m    107\u001b[39m     current_checkpoint+=\u001b[32m1\u001b[39m\n\u001b[32m    108\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCheckpoint reached!\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcurrent_checkpoint\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Car' object has no attribute 'mask'"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checkpoint reached! 1\n",
+      "Checkpoint reached! 2\n",
+      "Checkpoint reached! 3\n",
+      "Checkpoint reached! 4\n",
+      "Checkpoint reached! 5\n"
      ]
     }
    ],
