--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "0d5d622a",
    "metadata": {},
    "outputs": [],
@@ -11,14 +11,14 @@
     "import numpy as np\n",
     "import pygame           \n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "d0895936",
    "metadata": {},
    "outputs": [],
@@ -144,12 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ray_casting(car, screen, track_surface):\n",
+    "def ray_casting(car, track_surface):\n",
+    "    \"\"\"Cast rays from the car's position to detect the track boundaries.\n",
+    "\n",
+    "    Args:\n",
+    "        car (class): The car object.\n",
+    "        track_surface (Surface): The surface of the track.\n",
+    "\n",
+    "    Returns:\n",
+    "        sensor_distance (float): The distance to the nearest track boundary.\n",
+    "        sensor_endpoint (tuple): The (x, y) coordinates of the sensor endpoint.\n",
+    "    \"\"\"\n",
     "    sensor_distance = []\n",
     "    sensor_endpoint = []\n",
     "    sensor_angle = [-45, 0, 45]\n",
@@ -181,18 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "id": "35516690",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_3\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_4\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_3\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_4\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -204,11 +214,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_11 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span> │\n",
+       "│ dense_12 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_12 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "│ dense_13 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_13 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "│ dense_14 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">68</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -216,11 +226,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_11 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m128\u001b[0m │\n",
+       "│ dense_12 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m128\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_12 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "│ dense_13 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_13 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "│ dense_14 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │            \u001b[38;5;34m68\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -230,11 +240,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">707</span> (2.76 KB)\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">724</span> (2.83 KB)\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m707\u001b[0m (2.76 KB)\n"
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m724\u001b[0m (2.83 KB)\n"
       ]
      },
      "metadata": {},
@@ -243,11 +253,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">707</span> (2.76 KB)\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">724</span> (2.83 KB)\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m707\u001b[0m (2.76 KB)\n"
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m724\u001b[0m (2.83 KB)\n"
       ]
      },
      "metadata": {},
@@ -269,11 +279,15 @@
    ],
    "source": [
     "def model():\n",
-    "    input=tf.keras.Input(shape=(3,))\n",
+    "    \"\"\"Builds a simple feedforward neural network model.\n",
+    "\n",
+    "    Returns:\n",
+    "        model: A Keras Sequential model instance.\n",
+    "    \"\"\"\n",
     "    model=Sequential(\n",
     "        [Dense(32,activation='relu',input_shape=(3,)),\n",
     "         Dense(16,activation='relu'),\n",
-    "         Dense(3,activation='linear')]\n",
+    "         Dense(4,activation='linear')]\n",
     "    )\n",
     "    model.compile(optimizer='adam',loss='mse')\n",
     "    return model\n",
@@ -284,7 +298,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
+   "id": "f5641eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_game_step(action,car,track_image):\n",
+    "    \"\"\"Simulates a single step in the game using the provided action.\n",
+    "\n",
+    "    Args:\n",
+    "        action (int): The action to be taken (0: left, 1: accelerate, 2: right, 3: brake).\n",
+    "        car (Car): The car object.\n",
+    "        track_image (Surface): The surface of the track.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the new state, reward, and done flag.\n",
+    "    \"\"\"\n",
+    "    reward=0.1\n",
+    "    done=False\n",
+    "    \n",
+    "    speed_factor = car.speed / MAX_SPEED\n",
+    "    turn_range = MAX_TURN_ANGLE - MIN_TURN_ANGLE\n",
+    "    dynamic_turn_angle = MAX_TURN_ANGLE - (speed_factor * turn_range)\n",
+    "    if action==0:\n",
+    "        car.angle += dynamic_turn_angle\n",
+    "    elif action==2:\n",
+    "        car.angle -= dynamic_turn_angle\n",
+    "    elif action==1:\n",
+    "        if car.speed < MAX_SPEED:\n",
+    "                car.speed += ACCELERATION\n",
+    "    elif action==3:\n",
+    "        if car.speed > 0:\n",
+    "            car.speed -= BRAKE_FORCE\n",
+    "    if car.speed > 0:\n",
+    "        car.speed -= FRICTION\n",
+    "    if car.speed < 0:\n",
+    "        car.speed += FRICTION\n",
+    "    if abs(car.speed) < FRICTION:\n",
+    "        car.speed = 0\n",
+    "        \n",
+    "    car.move()\n",
+    "    car.draw(track_image)\n",
+    "    \n",
+    "    try:\n",
+    "        CAR_ROAD_COLOR = track_image.get_at((DEFAULT_START_X, DEFAULT_START_Y))[:3]\n",
+    "        pixel_color = track_image.get_at((int(car.x), int(car.y)))[0:3]\n",
+    "        if pixel_color == CAR_ROAD_COLOR:\n",
+    "            done = True\n",
+    "    except IndexError:\n",
+    "        done = True\n",
+    "    if done:\n",
+    "        reward= -100\n",
+    "        return [], reward, done\n",
+    "\n",
+    "    new_state,_=ray_casting(car,track_image)\n",
+    "    return new_state,reward,done\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af0f3dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_ai_simulation():\n",
+    "    \"\"\"Runs the car simulation controlled by an AI model.\n",
+    "        The AI model predicts actions based on the car's sensor data.\n",
+    "        0: turn left\n",
+    "        1: accelerate\n",
+    "        2: turn right\n",
+    "        3: brake\n",
+    "    \"\"\"\n",
+    "    pygame.init()\n",
+    "    screen=pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    clock=pygame.time.Clock()\n",
+    "    pygame.display.set_caption(\"AI Car Simulation\")\n",
+    "    track_surface=pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
+    "    car=Car(CAR_IMAGE_PATH,DEFAULT_START_X,DEFAULT_START_Y,DEFAULT_START_ANGLE,DEFAULT_START_SPEED)\n",
+    "    font=pygame.font.SysFont(None,22)\n",
+    "    \n",
+    "    running=True\n",
+    "    while running:\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type==pygame.QUIT:\n",
+    "                running=False\n",
+    "        current_state,ray_endpoints=ray_casting(car,track_surface)\n",
+    "        reshaped_state = np.reshape(current_state, [1, 3])\n",
+    "        q_values = ai_model.predict(reshaped_state, verbose=0)\n",
+    "        action = np.argmax(q_values[0])\n",
+    "        _ ,_ ,done=model_game_step(action,car,track_surface)\n",
+    "        print(f\"State (Sensors): {current_state}\")\n",
+    "        print(f\"Brain Output (Q-Values): {q_values[0]}\")\n",
+    "        print(f\"Chosen Action (0=L, 1=S, 2=R): {action}\")\n",
+    "        print(\"-\" * 20)\n",
+    "        if done:\n",
+    "            text_surface = font.render(\"Car Crashed! Resetting...\", True, (255, 255, 255))\n",
+    "            screen.blit(text_surface, (50, 50))\n",
+    "            pygame.display.update()\n",
+    "            pygame.time.wait(1000)\n",
+    "            car=Car(CAR_IMAGE_PATH,DEFAULT_START_X,DEFAULT_START_Y,DEFAULT_START_ANGLE,DEFAULT_START_SPEED)\n",
+    "        \n",
+    "        screen.blit(track_surface,(0,0))\n",
+    "        car.draw(screen)\n",
+    "        \n",
+    "        text_surface = font.render(f\"Distances: {current_state}\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 80))\n",
+    "        for points in ray_endpoints:\n",
+    "            pygame.draw.line(screen,(0,255,0),(car.x,car.y),points,1)\n",
+    "            \n",
+    "        pygame.display.update()\n",
+    "        clock.tick(1)\n",
+    "    pygame.quit()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
@@ -295,6 +426,14 @@
     "    start_angle=DEFAULT_START_ANGLE,\n",
     "    start_speed=DEFAULT_START_SPEED\n",
     "):\n",
+    "    \"\"\"Runs the car simulation manually by the user.\n",
+    "\n",
+    "    Args:\n",
+    "        start_x (int, optional): The starting x-coordinate of the car. Defaults to DEFAULT_START_X.\n",
+    "        start_y (int, optional): The starting y-coordinate of the car. Defaults to DEFAULT_START_Y.\n",
+    "        start_angle (float, optional): The starting angle of the car. Defaults to DEFAULT_START_ANGLE.\n",
+    "        start_speed (float, optional): The starting speed of the car. Defaults to DEFAULT_START_SPEED.\n",
+    "    \"\"\"\n",
     "    pygame.init()\n",
     "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "    clock = pygame.time.Clock()\n",
@@ -380,7 +519,7 @@
     "        screen.blit(text_surface, (50, 50))\n",
     "\n",
     "        # Ray casting\n",
-    "        distance, sensor_endpoint = ray_casting(car, screen, track_surface)\n",
+    "        distance, sensor_endpoint = ray_casting(car, track_surface)\n",
     "        text_surface = font.render(f\"Distances: {distance}\", True, (255, 255, 255))\n",
     "        screen.blit(text_surface, (50, 80))\n",
     "        for endpoint in sensor_endpoint:\n",
@@ -490,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "id": "823c5ef8",
    "metadata": {},
    "outputs": [
@@ -498,18 +637,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checkpoint reached! 1\n",
-      "Checkpoint reached! 2\n",
-      "Checkpoint reached! 3\n",
-      "Checkpoint reached! 4\n",
-      "Checkpoint reached! 5\n"
+      "State (Sensors): [34, 156, 28]\n",
+      "Brain Output (Q-Values): [-3.8983077e-02 -1.4073191e+01  4.6750340e+01  3.0004091e+00]\n",
+      "Chosen Action (0=L, 1=S, 2=R): 2\n",
+      "--------------------\n",
+      "State (Sensors): [34, 156, 28]\n",
+      "Brain Output (Q-Values): [-3.8983077e-02 -1.4073191e+01  4.6750340e+01  3.0004091e+00]\n",
+      "Chosen Action (0=L, 1=S, 2=R): 2\n",
+      "--------------------\n",
+      "State (Sensors): [34, 156, 28]\n",
+      "Brain Output (Q-Values): [-3.8983077e-02 -1.4073191e+01  4.6750340e+01  3.0004091e+00]\n",
+      "Chosen Action (0=L, 1=S, 2=R): 2\n",
+      "--------------------\n"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    #draw_track()\n",
-    "    run_simulation()\n"
+    "    #run_simulation()\n",
+    "    run_ai_simulation()\n"
    ]
   },
   {
